# cocos2dx-project

./: CMakeLists.txt  README.md
Resources/: sql - Copy.sql  sql.sql  temp.sql
Resources/FHD/Background/: button
Resources/FHD/Effect/: appear-1.plist  blast-hammer.plist  explosion-wind.plist  explosion.plist  gate-1.plist  serpent-screw.plist  shark.plist  teleport.plist  water-ball-impact.plist  water-ball.plist
Resources/FHD/Enemy/: big-fire-pig-attack.plist  big-fire-pig-chasing.plist  big-fire-pig-die.plist  big-fire-pig-idle.plist  big-fire-pig-move.plist  big-fire-pig-spawn.plist  big-fire-pig-take-hit.plist  big-gentleman-pig-attack.plist  big-gentleman-pig-chasing.plist  big-gentleman-pig-die.plist  big-gentleman-pig-idle.plist  big-gentleman-pig-move.plist  big-gentleman-pig-spawn.plist  big-gentleman-pig-take-hit.plist  blobulord-attack.plist  blobulord-chasing.plist  blobulord-die.plist  blobulord-idle.plist  blobulord-move.plist  blobulord-spawn.plist  blobulord-take-hit.plist  blood-buburst-attack.plist  blood-buburst-chasing.plist  blood-buburst-die.plist  blood-buburst-idle.plist  blood-buburst-move.plist  blood-buburst-spawn.plist  blood-buburst-take-hit.plist  demon-attack.plist  demon-chasing.plist  demon-die.plist  demon-idle.plist  demon-move.plist  demon-spawn.plist  demon-take-hit.plist  golem-attack.plist  golem-chasing.plist  golem-die.plist  golem-idle.plist  golem-move.plist  (+17 more)
Resources/FHD/Entity/: luna-attack.plist  luna-cast.plist  luna-damage.plist  luna-dash.plist  luna-die.plist  luna-evade.plist  luna-idle.plist  luna-item.plist  luna-prepare-dash.plist  luna-run.plist  luna-shot.plist  luna-spawn.plist
Resources/FHD/Projectile/: 01.plist  02.plist  Log.plist  Magma.plist  Nam.plist  explosion-1.plist  icy.plist  skull.plist  (+1 more)
Resources/Map/: BG.tsx  BG_1.tsx  Bridge.tsx  Ground.tsx  Object.tsx  ObjectStatic.tsx  ObjectStatic1.tsx  Object_1.tsx  Plateau.tiled-session  Plateau1.tmx  Plateau2.tmx  Plateau3.tmx  Plateau4.tmx  PlateauBoss.tmx  WAll.tsx  house.tsx  map1.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx  mapboss1.tmx  meta.tsx  tileset.tsx  wold-map.tsx  world-map.tmx
Scripts/: AppDelegate.cpp  Bitmask.h  Common.cpp  Common.h  Convert.cpp  Convert.h  GTimer.cpp  GTimer.h  GameConfig.cpp  GameConfig.h  ObjectTag.h  Scaler.cpp  Scaler.h
Scripts/Ability/: ActiveSkill.cpp  ActiveSkill.h  SerpentScrew.cpp  SerpentScrew.h
Scripts/AudioManager/: AudioManager.cpp  AudioManager.h
Scripts/Camera/: CameraFollow.cpp  CameraFollow.h
Scripts/Chapter/: Chapter.cpp  Chapter.h  ChapterInfo.h  ChapterInforRenderer.cpp  ChapterInforRenderer.h  ChapterMap.cpp  ChapterMap.h  ChapterMapInfo.h  EnemyWave.cpp  EnemyWave.h  LocationInfoBtn.cpp  LocationInfoBtn.h  ReplayChapter.h
Scripts/Character/: Character.cpp  Character.h  CharacterAttack.cpp  CharacterAttack.h  CharacterObserver.cpp  CharacterObserver.h  CharacterSubject.cpp  CharacterSubject.h
Scripts/Combat/: InfoTargetEnemy.cpp  InfoTargetEnemy.h
Scripts/ConsumableItem/: ConsumableItem.cpp  ConsumableItem.h  IConsumableItem.h
Scripts/DamagerSystem/: DamageMessage.cpp  DamageMessage.h  Power.cpp  Power.h
Scripts/Enemy/: Enemy.cpp  Enemy.h  EnemyPool.cpp  EnemyPool.h
Scripts/Entity/: BaseStat.cpp  BaseStat.h  Bonus.cpp  Bonus.h  BonusLevel.cpp  BonusLevel.h  DetectEntity.cpp  DetectEntity.h  Entity.cpp  Entity.h  EntityHealth.cpp  EntityHealth.h  EntityMana.cpp  EntityMana.h  EntityObserver.h  EntitySubject.cpp  EntitySubject.h  Stat.h
Scripts/Equipment/: IEquipment.h
Scripts/GameData/: AbilityData.cpp  AbilityData.h  ChapterData.cpp  ChapterData.h  ConsumableItemData.cpp  ConsumableItemData.h  Database.cpp  Database.h  EntityData.cpp  EntityData.h  ItemData.cpp  ItemData.h  PlayerData.cpp  PlayerData.h  PowerData.cpp  PowerData.h  RewardData.cpp  RewardData.h  SkillData.cpp  SkillData.h  WeaponData.cpp  WeaponData.h
Scripts/GameReward/: BonusCard.cpp  BonusCard.h  BonusDeck.cpp  BonusDeck.h  BonusRenderer.cpp  BonusRenderer.h  Chest.cpp  Chest.h  Coin.cpp  Coin.h  Reward.cpp  Reward.h  RewardRenderer.h
Scripts/Input/: ButtonNormalATK.cpp  ButtonNormalATK.h  ButtonSkill.cpp  ButtonSkill.h  Input.cpp  Input.h  Joystick.cpp  Joystick.h  JoystickMove.cpp  JoystickMove.h  PlayerInput.cpp  PlayerInput.h
Scripts/Inventory/: IInventoryContainer.h  InventoryBase.cpp  InventoryBase.h  PlayerInventory.cpp  PlayerInventory.h
Scripts/Manager/: GameManager.cpp  GameManager.h
Scripts/Map/: GameMap.cpp  GameMap.h  Gate.cpp  Gate.h
Scripts/ObjectInfo/: CoinInfo.h  EntityInfo.h  ItemInfo.h
Scripts/Player/: AttributeLayer.cpp  AttributeLayer.h  CharacterWindowView.cpp  CharacterWindowView.h  IInforLayer.cpp  IInforLayer.h  InformationScene.cpp  InformationScene.h  OptionLayer.cpp  OptionLayer.h  Player.cpp  Player.h  SkillBtnShowDetail.cpp  SkillBtnShowDetail.h  StatRenderer.cpp  StatRenderer.h
Scripts/Projectile/: IProjectile.h  Projectile.cpp  Projectile.h  ProjectilePool.cpp  ProjectilePool.h
Scripts/Scene/: HomeScene.cpp  HomeScene.h  LoadingScene.cpp  LoadingScene.h  LoseGame.cpp  LoseGame.h  PlayerInventoryScene.cpp  PlayerInventoryScene.h  SettingScene.cpp  SettingScene.h  SettingSceneInGame.cpp  SettingSceneInGame.h  ShopScene.cpp  ShopScene.h  SkillCollection.cpp  SkillCollection.h  SummaryGame.cpp  SummaryGame.h  TestScene.cpp  TestScene.h  WinGame.cpp  WinGame.h  WorldMap.cpp  WorldMap.h
Scripts/Settings/: Setting.cpp  Setting.h
Scripts/Shop/: BoxContainer.cpp  BoxContainer.h  ContainerScrollView.cpp  ContainerScrollView.h  DetailItem.cpp  DetailItem.h  HorizontalLayout.cpp  HorizontalLayout.h  ItemShopSlot.cpp  ItemShopSlot.h  RowItem.cpp  RowItem.h  ShopContainer.cpp  ShopContainer.h  VerticalLayout.cpp  VerticalLayout.h
Scripts/Skill/: ISkill.h  PassiveSkill.cpp  PassiveSkill.h  Skill.cpp  Skill.h  SkillInfo.h
Scripts/UI/: BounceLayer.cpp  BounceLayer.h  CharacterStateUI.cpp  CharacterStateUI.h  CoinBar.cpp  CoinBar.h  Effect.cpp  Effect.h  FloatingNumber.cpp  FloatingNumber.h  FloatingTextNofify.cpp  FloatingTextNofify.h  HUDLayer.cpp  HUDLayer.h
(+101 files in other folders)
